--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,15 @@
 <nav class="navbar navbar-expand-sm bg-primary navbar-dark">
   <ul class="navbar-nav">
     <li class="nav-item">
-      <a routerLink="recordingStudios" routerLinkActive="active" class="nav-link"> Recording Studio List </a>
+      <a routerLink="recordingStudios" routerLinkActive="active" class="nav-link"> Recording Studios List </a>
     </li>
 
     <li class="nav-item">
-      <a routerLink="createRecordingStudio" routerLinkActive="active" class="nav-link"> Add Recording Studio </a>
+      <a routerLink="artists" routerLinkActive="active" class="nav-link"> Artists List </a>
     </li>
 
   </ul>
 </nav>
-
 
 
 <h1 class="text-center">{{title}}</h1>
@@ -18,9 +17,4 @@
   <router-outlet></router-outlet>
 </div>
 
-<footer class="footer">
-  <div class="container">
-    <span> Recording Studio </span>
-  </div>
-</footer>
 
